// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormRow behavior onBlur is called in child 1`] = `
<EuiFormRow
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
  labelType="label"
>
  <div
    className="euiFormRow"
    id="generated-id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <EuiFormLabel
        className="euiFormRow__label"
        htmlFor="generated-id"
        isFocused={false}
        type="label"
      >
        <label
          className="euiFormLabel euiFormRow__label"
          htmlFor="generated-id"
        >
          <span>
            Label
          </span>
        </label>
      </EuiFormLabel>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <input
        id="generated-id"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </div>
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow behavior onBlur works in parent even if not in child 1`] = `
<EuiFormRow
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
  labelType="label"
>
  <div
    className="euiFormRow"
    id="generated-id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <EuiFormLabel
        className="euiFormRow__label"
        htmlFor="generated-id"
        isFocused={false}
        type="label"
      >
        <label
          className="euiFormLabel euiFormRow__label"
          htmlFor="generated-id"
        >
          <span>
            Label
          </span>
        </label>
      </EuiFormLabel>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <input
        id="generated-id"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </div>
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow behavior onFocus is called in child 1`] = `
<EuiFormRow
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
  labelType="label"
>
  <div
    className="euiFormRow"
    id="generated-id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <EuiFormLabel
        className="euiFormRow__label"
        htmlFor="generated-id"
        isFocused={true}
        type="label"
      >
        <label
          className="euiFormLabel euiFormRow__label euiFormLabel-isFocused"
          htmlFor="generated-id"
        >
          <span>
            Label
          </span>
        </label>
      </EuiFormLabel>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <input
        id="generated-id"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </div>
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow behavior onFocus works in parent even if not in child 1`] = `
<EuiFormRow
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
  labelType="label"
>
  <div
    className="euiFormRow"
    id="generated-id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <EuiFormLabel
        className="euiFormRow__label"
        htmlFor="generated-id"
        isFocused={true}
        type="label"
      >
        <label
          className="euiFormLabel euiFormRow__label euiFormLabel-isFocused"
          htmlFor="generated-id"
        >
          <span>
            Label
          </span>
        </label>
      </EuiFormLabel>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <input
        id="generated-id"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </div>
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props compressed is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--compressed"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props describedByIds is rendered 1`] = `
<div
  className="euiFormRow"
  id="generated-id-row"
>
  <div
    className="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-additional"
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type center is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper euiFormRow__fieldWrapperDisplayOnly"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type centerCompressed is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--compressed"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper euiFormRow__fieldWrapperDisplayOnly"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type columnCompressed is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--compressed euiFormRow--horizontal"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type columnCompressedSwitch is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--compressed euiFormRow--horizontal euiFormRow--hasSwitch"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type row is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type rowCompressed is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--compressed"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props displayOnly is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper euiFormRow__fieldWrapperDisplayOnly"
  >
    <span
      id="generated-id"
    >
      just some text
    </span>
  </div>
</div>
`;

exports[`EuiFormRow props error as array is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-error-0 generated-id-error-1"
      id="generated-id"
    />
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text"
      id="generated-id-error-0"
    >
      Error
    </div>
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text"
      id="generated-id-error-1"
    >
      Error2
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props error as string is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-error-0"
      id="generated-id"
    />
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text"
      id="generated-id-error-0"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props error is not rendered if isInvalid is false 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props fullWidth is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--fullWidth"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props hasEmptyLabelSpace is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasEmptyLabelSpace"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props helpText is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-help"
      id="generated-id"
    />
    <div
      class="euiFormHelpText euiFormRow__text"
      id="generated-id-help"
    >
      <span>
        This is help text.
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props id is rendered 1`] = `
<div
  class="euiFormRow"
  id="id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props isInvalid is rendered 1`] = `
<div
  class="euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      aria-invalid="true"
      class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
      for="generated-id"
    >
      label
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props label append is rendered 1`] = `
<div
  className="euiFormRow"
  id="generated-id-row"
>
  <div
    className="euiFormRow__labelWrapper"
  >
    <EuiFormLabel
      className="euiFormRow__label"
      htmlFor="generated-id"
      isFocused={false}
      type="label"
    >
      label
    </EuiFormLabel>
     
    append
  </div>
  <div
    className="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`EuiFormRow props label is rendered 1`] = `
<div
  className="euiFormRow"
  id="generated-id-row"
>
  <div
    className="euiFormRow__labelWrapper"
  >
    <EuiFormLabel
      className="euiFormRow__label"
      htmlFor="generated-id"
      isFocused={false}
      type="label"
    >
      label
    </EuiFormLabel>
  </div>
  <div
    className="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`EuiFormRow props label renders as a legend and subsquently a fieldset wrapper 1`] = `
<fieldset
  aria-labelledby="generated-id-legend"
  className="euiFormRow"
  id="generated-id-row"
>
  <div
    className="euiFormRow__labelWrapper"
  >
    <EuiFormLabel
      className="euiFormRow__label"
      id="generated-id-legend"
      isFocused={false}
      type="legend"
    >
      label
    </EuiFormLabel>
  </div>
  <div
    className="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</fieldset>
`;
